ytPremiumAdDeleted log deleted, fix event.path, fix popupScript

--- a/popup.html
+++ b/popup.html
@@ -35,5 +35,6 @@
             </div>
             <br id="lootstoolsBr">
         </div>
+        <script type="text/javascript" src="popupScript.js"></script>
     </body>
 </html>
